# xiaohongshu-tool

./: .gitignore  README.md  config.toml  docker-setup.md  pyproject.toml  start.bat  test.bat
assets/backgrounds/: README.txt
scripts/: run_pipeline.py
src/xhs_supervisor/: __init__.py  config.py  retry.py  server.py  state.py  supervisor.py
src/xhs_supervisor/nodes/: __init__.py  copywriter.py  publisher.py  selector.py  visual.py
tests/: __init__.py  test_state.py
web-api/: main.py  requirements.txt  routes.py
web-ui/: package-lock.json  package.json  webpack.config.js
web-ui/public/: index.html
web-ui/src/: App.js
web-ui/src/components/: ControlPanel.js  LogViewer.js  TaskStatus.js
