[project]
name = "xhs-supervisor"
version = "0.1.0"
description = "Xiaohongshu low-price product promotion auto-operation system (Supervisor multi-agent)"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
    "tomli>=2.0.1; python_version<'3.11'",
    "python-dotenv>=1.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "sse-starlette>=2.1.0",
    "tenacity>=8.2.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
rmbg = ["torch>=2.2.0", "transformers>=4.40.0", "torchvision>=0.17.0", "scikit-image>=0.23.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.5.0"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
